# root_finder

./: CMakeLists.txt  README.md  test_bisection.cpp
.github/workflows/: build.yml  generate_tests.yml  pipeline.yml  run_tests.yml  update_cmake.yml
include/: Bisection.hpp  Newton.hpp
tests/: problems.md  test_newton.cpp
